# dovecote

./: .gitmodules  Cargo.toml  README.md  package.json  wrangler.toml
dioxus/: Cargo.toml  Dioxus.toml
dioxus/.cargo/: config.toml
dioxus/src/: lib.rs
pen/: .gitignore  Cargo.toml  wrangler.toml
pen/.cargo/: config.toml
pen/src/: lib.rs
perch/: Cargo.toml  Dioxus.toml  build.sh
perch/.cargo/: config.toml
perch/assets/: tailwind.css
perch/src/: lib.rs  main.rs
perch/src/api/: mod.rs  mult.rs
perch/src/components/: mod.rs  ory_error.rs  ory_log_out.rs  theme_controller.rs
perch/src/views/: blog.rs  error.rs  index.rs  mod.rs  wrapper.rs
src/: lib.rs
src/api/: authorize.rs  devices.rs  nidd.rs  registered_callback_listeners.rs
src/cache/: access.rs
src/callback/: mod.rs  nidd.rs
src/helpers/: flocks.rs
src/models/: flock.rs  flock_pigeons.rs  flocks.rs  mod.rs  pigeon.rs  pigeon_message.rs  pigeons.rs
src/objects/: flocks.rs  pigeons.rs
src/pigeon/: devices.rs  storage.rs
wasm-serv/: Cargo.toml  wrangler.toml
wasm-serv/.cargo/: config.toml
wasm-serv/src/: lib.rs
wasm-serv/src/api/: authorize.rs  mod.rs
wasm-serv/src/cache/: access.rs
wasm-serv/src/callback/: nidd.rs
wasm-serv/src/pigeon/: mod.rs  nidd_messages.rs  storage.rs
