[package]
name = "dovecote"
version = "0.1.0"
authors = ["justin <code@jes.contact>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
worker = { version = "0.7" }
ory-kratos-client-wasm = { git = "https://github.com/justins-engineering/kratos-client-rust.git", default-features = false, features = [
  "worker",
] }
