[package]
name = "dovecote"
version = "0.1.0"
authors = ["justin <code@jes.contact>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
worker = { version = "0.8", features = ["tokio-postgres"] }
futures = "0.3"
tokio-postgres = { version = "0.7", features = [
    "js",
    "with-uuid-1",
    "with-time-0_3"
], default-features = false }
uuid = "1"
ory-kratos-client-wasm = { git = "https://github.com/justins-engineering/kratos-client-rust.git", default-features = false, features = [
  "worker",
] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "wasm-bindgen"] }
