[package]
name = "pen"
version = "0.1.0"
authors = ["justin <code@jes.contact>"]
edition = "2024"

[package.metadata.release]
release = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory"]

[lib]
crate-type = ["cdylib"]

[dependencies]
perch = { path = "../perch" }
# Dependencies for `api` feature
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = { version = "0.7" }
web-sys = { version = "0.3", features = ["Location", "Window"] }
console_error_panic_hook = { version = "0.1.7" }
futures = "0.3"
http = "1.3"
serde_json = "1"
worker = { version = "0.6", features = ['http'] }
worker-macros = { version = "0.6", features = ['http'] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
