[package]
name = "perch"
version = "0.1.0"
authors = ["justin <code@jes.contact>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory"]

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-free-icons = { version = "0.9", features = [
  "font-awesome-brands",
  "lucide",
] }
serde_json = "1"
web-sys = { version = "0.3.77", features = [
  "Headers",
  "HtmlDocument",
  "Location",
  "Window",
] }
web-time = { version = "1.1.0" }
js-sys = { version = "0.3.77" }
wasm-theme = { version = "0.1" }
ory-kratos-client-wasm = { git = "https://github.com/justins-engineering/kratos-client-rust.git", branch = "feature-only" }

# Dependencies for `api` feature
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_urlencoded = { version = "0.7", optional = true }

[features]
default = ["web", "api"]
api = ["dep:reqwest", "dep:serde", "dep:serde_urlencoded"]
web = ["dioxus/web"]
server = ["dioxus/server"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
