[package]
name = "wasm-serv"
version = "0.1.0"
authors = ["justin <code@jes.contact>"]
edition = "2024"

[package.metadata.release]
release = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory"]

[lib]
crate-type = ["cdylib"]

[dependencies]
thingspace-sdk = { git = "https://github.com/justins-engineering/thingspace-sdk-rust.git", branch = "no-app", default-features = false, features = [
  "worker",
] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = { version = "0.7" }
web-sys = { version = "0.3", features = [
  "EventSource",
  "EventTarget",
  "Location",
  "Window",
] }
serde_json = "1"
worker = { version = "0.7" }

const_format = "0.2"
base64ct = "1"
serde-wasm-bindgen = { version = "0.6" }
futures = { version = "0.3", default-features = false }

[features]
default = ["api"]
browser = []
api = []

[profile]

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
